--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Галерея</title>
-    <link rel="stylesheet" href="css/style.css"/>
-    <link href="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
-    " rel="stylesheet">
-</head>
-<body>
+    <!-- Стилі -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- Бібліотека -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <ul class="gallery"></ul>
 
-    <script src="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-    "></script>
-       
+    <!-- Скрипт бібліотеки basiclightbox -->
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <!-- Скрипт сторінки -->
     <script src="js/pictures.js" type="module"></script>
-</body>
+  </body>
 </html>
